--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -18,7 +18,7 @@
 	</div>
 </header>
 
-<div class="hero hero-overlay no-grayscale hero-blend2" style="background-image: url(http://www.mogadorcafe.nl/wp-content/uploads/BG_01.jpg);">
+<div class="hero hero-overlay no-grayscale hero-blend-no" style="background-image: url(http://www.mogadorcafe.nl/wp-content/uploads/BG_01.jpg);">
 	{{!-- If client has video --}}
 	{{!-- <div class="hero-video">
 		<video loop="true" autoplay="true" muted="muted" poster="http://www.mogadorcafe.nl/wp-content/uploads/BG_01.jpg">
