--- a/src/templates/partials/partial-streamer.hbs
+++ b/src/templates/partials/partial-streamer.hbs
@@ -2,8 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 text-center">
-                <p>Black as the devil, Hot as hell.</p>
-                {{!-- <a href="#" class="button button-outline-white">Checkout</a> --}}
+                <p class="first">Black as the devil, Hot as hell. {{!-- <a href="#" class="button button-outline-white button-inline">Email us</a> --}}</p>
+                <p class="small">"Someone's Name"</p>
+                
             </div>
         </div>
     </div>
