--- a/src/templates/partials/partial-gallery.hbs
+++ b/src/templates/partials/partial-gallery.hbs
@@ -1,7 +1,7 @@
 <section class="section gallery">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 text-center">
+			<div class="col-xs-10 col-xs-offset-1 text-center">
 				<h2 class="h2">Gallery.<small>Checkout our latest products.</small></h2>
 			</div>
 		</div>
