--- a/src/templates/partials/partial-products.hbs
+++ b/src/templates/partials/partial-products.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-sm-12 text-center">
+	<div class="col-xs-10 col-xs-offset-1 text-center">
 		<h2 class="h2">Products.<small>Checkout our latest products.</small></h2>
 	</div>
 </div>
