--- a/src/templates/partials/partial-content.hbs
+++ b/src/templates/partials/partial-content.hbs
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="h2">Content.</h2>
+				<h2 class="h2">Content.<small>Some text goes here.</small></h2>
 			</div>
 		</div>
 		<div class="row">
@@ -10,16 +10,18 @@
 				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="" title="Title goes here">
 					<div class="thumbnail">
 						<div class="img-container img-ratio-2-1 ">
-							<img src="/assets/img/pixel.gif" data-src="http://c8.alamy.com/comp/ENBEMR/hipster-barista-working-at-laptop-in-coffee-shop-ENBEMR.jpg" class="img-responsive lazyload">
+							<img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x400/eee/fff.png" class="img-responsive lazyload">
 						</div>
 					</div>
 				</a>
 				<p class="paragraph">
 					Lorem ipsum dolor sit amet, <a href="">consectetuer adipiscing elit</a>. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
 				</p>
+				<h3 class="h3">Surfboards.</h3>
 				<p class="paragraph">
 					Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
 				</p>
+				<h3 class="h3">Surfboards.</h3>
 				<ul class="paragraph">
 					<li>Donec pede justo, fringilla vel, aliquet nec</li>
 					<li>Donec pede justo, fringilla vel, aliquet nec</li>
