--- a/src/templates/partials/partial-products.hbs
+++ b/src/templates/partials/partial-products.hbs
@@ -1,26 +1,29 @@
-<div class="row">
-	<div class="col-xs-10 col-xs-offset-1 text-center">
-		<h2 class="h2">Products.<small>Checkout our latest products.</small></h2>
+<section class="section section-line products">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1 text-center">
+				<h2 class="h2">Products.<small>Checkout our latest products.</small></h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center column">
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="" title="Title goes here"><div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/600x600/eee/fff.png" class="img-responsive lazyload"></div></a>
+				<h4 class="h4">Product $99</h4>
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+				<a href="#" class="button button-rounded"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Buy</a>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center column">
+				<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/600x600/eee/fff.png" class="img-responsive lazyload"></div>
+				<h4 class="h4">Product $99</h4>
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+				<a href="#" class="button button-rounded">Buy</a>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center">
+				<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/600x600/eee/fff.png" class="img-responsive lazyload"></div>
+				<h4 class="h4">Product $99</h4>
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+				<a href="#" class="button">Buy</a>
+			</div>
+		</div>
 	</div>
-</div>
-
-<div class="row">
-	<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center column">
-		<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/600x600/eee/fff.png" class="img-responsive lazyload"></div>
-		<h4 class="h4">Product $99</h4>
-		<p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-		<a href="#" class="button button-rounded"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Buy</a>
-	</div>
-	<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center column">
-		<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/600x600/eee/fff.png" class="img-responsive lazyload"></div>
-		<h4 class="h4">Product $99</h4>
-		<p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-		<a href="#" class="button button-rounded">Buy</a>
-	</div>
-	<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
-		<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/600x600/eee/fff.png" class="img-responsive lazyload"></div>
-		<h4 class="h4">Product $99</h4>
-		<p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-		<a href="#" class="button">Buy</a>
-	</div>
-</div>
+</section>
