--- a/src/static/css/base.scss
+++ b/src/static/css/base.scss
@@ -1,6 +1,7 @@
-@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Domine:400,700|Merriweather';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Domine:400,700|Merriweather|Dancing+Script';
 @import "bootstrap.css";
 @import "variables.scss";
+@import "preloader.scss";
 @import "typography.scss";
 @import "forms.scss";
 @import "layout.scss";
