--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <title>{{title}}</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta property="og:type" content="{{site.type}}" />
-    <meta property="og:title" content="{{title}}" />
-    <meta name="description" content="{{site.description}}" />
-    <meta property="og:url" content="{{site.url}}" />
-    <meta property="og:image" content="{{site.ogimage}}" />
-    <link href="{{assets}}/css/styles.min.css" rel="stylesheet">
-    <link href="{{assets}}/img/favicon.ico" rel="shortcut icon" type="image/ico" />
-    <script src="https://use.fontawesome.com/3ca1480440.js"></script>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<title>{{site.intro}} - {{site.title}}</title>
+	
+	<!-- META -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta property="og:type" content="{{site.type}}" />
+	<meta property="og:title" content="{{site.title}}" />
+	<meta name="description" content="{{site.description}}" />
+	<meta property="og:url" content="{{site.url}}" />
+	<meta property="og:image" content="{{site.ogimage}}" />
+	<meta name="robots" content="INDEX, FOLLOW" />
+	<meta name="googlebot" content="index,follow" >
+	<meta name="description" content="{{site.description}}" />
+	<meta name="keywords" content="{{site.keywords}}" />
+	<meta name="author" content="{{site.author}}" />
+	<meta name="webdevelopment" content="Roan Hahn" />
+	<meta name="distribution" content="Global" />
+	<meta name="language" content="nl-nl" />
+	
+	<!-- CSS -->
+	<link href="{{assets}}/css/styles.min.css" rel="stylesheet">
+	<link href="{{assets}}/img/favicon.ico" rel="shortcut icon" type="image/ico" />
+	<script src="https://use.fontawesome.com/3ca1480440.js"></script>
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-59439931-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 </head>
-<body class="body">
-    {{> body }}
-    <!-- Our JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="{{assets}}/js/app.js"></script>
+<body>
+	<section id="preloader">
+		<div class="site-spinner"></div>
+	</section>
+	{{> body }}
+	<!-- Our JavaScript -->
+	<script src="{{assets}}/js/app.js"></script>
+	<script src="{{assets}}/js/plugins/jquery.validate.min.js" type="text/javascript"></script>
+	<script src="{{assets}}/js/plugins/contact-form.js" type="text/javascript"></script>
 </body>
 </html>
