--- a/src/templates/partials/partial-address.hbs
+++ b/src/templates/partials/partial-address.hbs
@@ -1,4 +1,4 @@
-<section class="section contact">
+<section class="section address contact">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
