--- a/src/templates/partials/partial-footer.hbs
+++ b/src/templates/partials/partial-footer.hbs
@@ -1,17 +1,18 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 text-center">
-				<p>© ClientName. All Rights Reserved.<br />
-				Website by <a href="#">Roan Hahn</a></p>
+			<div class="col-xs-12 text-center">
+				<p>© {{site.title}}. All Rights Reserved.<br />
+				Website by <a href="#">{{site.developer}}</a></p>
 
 				<ul class="social">
-					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-google" aria-hidden="true"></i></a></li>
+					<li><a href="{{site.facebook}}"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					<li><a href="{{site.twitter}}"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					<li><a href="{{site.pinterest}}"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+					<li><a href="{{site.google}}"><i class="fa fa-google" aria-hidden="true"></i></a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 </footer>
+<button class="back-to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
