--- a/src/templates/partials/partial-gallery.hbs
+++ b/src/templates/partials/partial-gallery.hbs
@@ -9,30 +9,30 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="https://i.kinja-img.com/gawker-media/image/upload/mlaxgpzw0xmvwxamausk.png" class="img-responsive lazyload"></div></a>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
 			</div>
 			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="https://i.kinja-img.com/gawker-media/image/upload/mlaxgpzw0xmvwxamausk.png" class="img-responsive lazyload"></div></a>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
 			</div>
 			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="https://i.kinja-img.com/gawker-media/image/upload/mlaxgpzw0xmvwxamausk.png" class="img-responsive lazyload"></div></a>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
 			</div>
 			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="https://i.kinja-img.com/gawker-media/image/upload/mlaxgpzw0xmvwxamausk.png" class="img-responsive lazyload"></div></a>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="https://i.kinja-img.com/gawker-media/image/upload/mlaxgpzw0xmvwxamausk.png" class="img-responsive lazyload"></div></a>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
 			</div>
 			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="https://i.kinja-img.com/gawker-media/image/upload/mlaxgpzw0xmvwxamausk.png" class="img-responsive lazyload"></div></a>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
 			</div>
 			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="https://i.kinja-img.com/gawker-media/image/upload/mlaxgpzw0xmvwxamausk.png" class="img-responsive lazyload"></div></a>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
 			</div>
 			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="https://i.kinja-img.com/gawker-media/image/upload/mlaxgpzw0xmvwxamausk.png" class="img-responsive lazyload"></div></a>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
 			</div>
 		</div>
 	</div>
