--- a/src/static/css/buttons.scss
+++ b/src/static/css/buttons.scss
@@ -31,7 +31,7 @@
 		padding: 25px 50px;
 	}
 
-	@media all and(max-width: $breakpoint-mobile){
+	@media all and(max-width: $breakpoint-tablet){
 		padding: 20px 30px;
 		font-size: 13px;
 
