--- a/src/static/css/header.scss
+++ b/src/static/css/header.scss
@@ -105,7 +105,7 @@
 		bottom: 0;
 		top: 0;
 		background-color: rgba(0,0,0,0.95);
-		background-color: $color-2;
+		// background-color: $color-2;
 		text-align: center;
 		text-shadow: none;
 
@@ -180,12 +180,13 @@
 	&-overlay:before{
 		content: "";
 		display: block;
-		background-color: rgba(50,50,50,0.4);
+		background-color: rgba(50,50,50,0.5);
 		position: absolute;
 		left: 0;
 		right: 0;
 		bottom: 0;
 		top: 0;
+		z-index: 10;
 		// mix-blend-mode: saturation;
 	}
 
@@ -219,10 +220,10 @@
 		margin-bottom: 10px;
 
 		& span{
-			color: $color-2;
+			color: $color-1;
 		}
-		@media all and(max-width: $breakpoint-tablet){
-			font-size: 40px;
+		@media all and(max-width: $breakpoint-mobile){
+			font-size: 32px;
 		}
 	}
 
@@ -233,7 +234,7 @@
 		margin-bottom: 30px;
 		text-transform: uppercase;
 
-		@media all and(max-width: $breakpoint-tablet){
+		@media all and(max-width: $breakpoint-mobile){
 			font-size: 14px;
 		}
 		@media all and(max-width: $breakpoint-mobile){
@@ -247,7 +248,7 @@
 		margin-bottom: 50px;
 		font-weight: 400;
 
-		@media all and(max-width: $breakpoint-tablet){
+		@media all and(max-width: $breakpoint-mobile){
 			font-size: 18px;
 		}
 		@media all and(max-width: $breakpoint-mobile){
@@ -298,4 +299,30 @@
 			top: 0;
 		}
 	}
+}
+
+.background_cycler {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+
+.background_cycler div {
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-size: cover;
+	background-position: center center;
+	z-index: 1; 
+}
+
+.background_cycler div.active {
+	z-index: 3;
 }
