--- a/src/static/css/layout.scss
+++ b/src/static/css/layout.scss
@@ -3,7 +3,7 @@
 	background: $section-color;
 
 	&-2{
-		background: #fafafa;
+		background: $section-grey-color;
 	}
 
 	&-dark{
@@ -12,7 +12,7 @@
 	}
 
 	&-line{
-		border-bottom: 1px solid $color-1;
+		border-bottom: 1px solid $line-color;
 	}
 }
 
