--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -30,7 +30,7 @@
   -webkit-animation: site-spin 1s linear infinite;
   -moz-animation: site-spin 1s linear infinite;
   animation: site-spin 1s linear infinite;
-  border-top-color: #7d387d; }
+  border-top-color: #17bebb; }
 
 @-webkit-keyframes site-spin {
   to {
@@ -59,7 +59,7 @@ body, html {
   font-weight: 400;
   font-size: 16px;
   font-family: "Domine", serif;
-  color: #27474e;
+  color: #2e282a;
   height: 100%;
   background: #fff;
   -webkit-overflow-scrolling: touch;
@@ -75,36 +75,42 @@ a {
   -moz-transition: all .2s ease-in-out 0s;
   -o-transition: all .2s ease-in-out 0s;
   transition: all .2s ease-in-out 0s;
-  color: #7d387d; }
+  color: #17bebb; }
   a:hover {
     text-decoration: none;
-    color: #7d387d; }
+    color: #17bebb; }
 
 .h2 {
   font-family: "Montserrat", serif;
-  color: #27474e;
+  color: #2e282a;
   font-weight: 700;
   font-size: 36px;
+  margin-top: 0;
   margin-bottom: 40px;
   text-transform: uppercase; }
   .h2 small {
     display: block;
     font-family: "Domine", serif;
-    color: #7d387d;
+    color: #17bebb;
     text-transform: none;
-    margin: 15px 0; }
+    margin: 15px 0 70px; }
   @media all and (max-width: 767px) {
     .h2 {
       font-size: 26px; } }
 
+.section-2 .h2 {
+  color: #e282a; }
+  .section-2 .h2 small {
+    color: #fff; }
+
 .h3 {
   font-family: "Montserrat", serif;
-  color: #7d387d;
+  color: #17bebb;
   font-size: 28px;
   margin-bottom: 30px; }
 
 .h4 {
-  color: #7d387d;
+  color: #17bebb;
   font-family: "Montserrat", serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -119,14 +125,14 @@ a {
   .paragraph a {
     text-decoration: underline; }
   .paragraph a:hover {
-    color: #27474e; }
+    color: #2e282a; }
   .paragraph li {
     list-style-position: inside; }
 
 .streamer {
-  background: #7d387d;
+  background: #2e282a;
   padding: 50px 0;
-  color: #fff;
+  color: #17bebb;
   font-family: "Montserrat", serif;
   font-weight: 700;
   font-size: 26px; }
@@ -153,7 +159,42 @@ a {
 
 hr {
   margin: 70px 0;
-  border-color: #7d387d; }
+  border-color: red; }
+
+.pricelist {
+  font-family: "Montserrat", serif;
+  padding: 30px 0;
+  text-align: center;
+  background-color: #fff;
+  border: 1px solid rgba(23, 61, 80, 0.06); }
+  .pricelist-cat {
+    text-transform: uppercase;
+    margin-bottom: 10px; }
+    .pricelist-cat-title {
+      font-size: 20px;
+      font-weight: bold; }
+    .pricelist-cat-price {
+      font-size: 60px;
+      vertical-align: baseline; }
+      .pricelist-cat-price .amount {
+        display: inline-block; }
+      .pricelist-cat-price .currency {
+        font-size: 18px;
+        vertical-align: text-top;
+        margin-top: 10px;
+        display: inline-block; }
+      .pricelist-cat-price .duration {
+        font-size: 15px;
+        display: inline-block; }
+  .pricelist ul {
+    margin: 0 0 15px;
+    padding: 0;
+    font-size: 14px; }
+  .pricelist li {
+    list-style-type: none;
+    padding: 10px; }
+    .pricelist li:nth-child(odd) {
+      background-color: rgba(23, 61, 80, 0.06); }
 
 .form-group {
   margin-bottom: 25px; }
@@ -163,9 +204,9 @@ hr {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  color: #27474e; }
+  color: #2e282a; }
   .form-control:focus {
-    border-color: #7d387d;
+    border-color: #17bebb;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none; }
@@ -195,12 +236,12 @@ label.error {
   padding: 70px 0;
   background: #fff; }
   .section-2 {
-    background: #fafafa; }
+    background: #909590; }
   .section-dark {
-    background: #27474e;
+    background: #2e282a;
     color: #fff; }
   .section-line {
-    border-bottom: 1px solid #7d387d; }
+    border-bottom: 1px solid red; }
 
 @media all and (max-width: 991px) {
   .column {
@@ -288,7 +329,6 @@ label.error {
       bottom: 0;
       top: 0;
       background-color: rgba(0, 0, 0, 0.95);
-      background-color: #27474e;
       text-align: center;
       text-shadow: none; }
       .navbar ul {
@@ -307,7 +347,7 @@ label.error {
           padding: 20px 0;
           font-size: 16px; }
           .navbar li a:hover {
-            color: #7d387d; }
+            color: #17bebb; }
           .navbar li a:before {
             display: none; } }
 
@@ -343,16 +383,17 @@ label.error {
   .hero-overlay:before {
     content: "";
     display: block;
-    background-color: rgba(50, 50, 50, 0.4);
+    background-color: rgba(50, 50, 50, 0.5);
     position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
-    top: 0; }
+    top: 0;
+    z-index: 10; }
   .hero-blend:before {
     content: "";
     display: block;
-    background-color: #7d387d;
+    background-color: #17bebb;
     position: absolute;
     left: 0;
     right: 0;
@@ -374,17 +415,17 @@ label.error {
     font-weight: 700;
     margin-bottom: 10px; }
     .hero-h1 span {
-      color: #27474e; }
-    @media all and (max-width: 991px) {
+      color: #17bebb; }
+    @media all and (max-width: 767px) {
       .hero-h1 {
-        font-size: 40px; } }
+        font-size: 32px; } }
   .hero-first-line {
     font-size: 16px;
     letter-spacing: 1px;
     font-weight: 700;
     margin-bottom: 30px;
     text-transform: uppercase; }
-    @media all and (max-width: 991px) {
+    @media all and (max-width: 767px) {
       .hero-first-line {
         font-size: 14px; } }
     @media all and (max-width: 767px) {
@@ -395,7 +436,7 @@ label.error {
     font-size: 30px;
     margin-bottom: 50px;
     font-weight: 400; }
-    @media all and (max-width: 991px) {
+    @media all and (max-width: 767px) {
       .hero-second-line {
         font-size: 18px; } }
     @media all and (max-width: 767px) {
@@ -434,8 +475,31 @@ label.error {
       bottom: 0;
       top: 0; }
 
+.background_cycler {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: none; }
+
+.background_cycler div {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
+  z-index: 1; }
+
+.background_cycler div.active {
+  z-index: 3; }
+
 footer {
-  background: #27474e;
+  background: #221d23;
   padding: 100px 0;
   color: #fff;
   font-size: 14px;
@@ -473,7 +537,7 @@ footer {
         text-align: center; }
         footer .social li a:hover {
           background: #fff;
-          color: #7d387d; }
+          color: #17bebb; }
 
 .button {
   padding: 25px 40px;
@@ -491,17 +555,17 @@ footer {
   transition: all 0.2s ease-in-out 0s;
   font-family: "Montserrat", serif;
   border-width: 2px;
-  border-color: #7d387d;
+  border-color: #17bebb;
   border-style: solid;
-  background: #7d387d;
+  background: #17bebb;
   color: #fff; }
   .button:active, .button:focus {
     color: #fff; }
   .button:hover {
     background: #fff;
-    color: #7d387d;
+    color: #17bebb;
     padding: 25px 50px; }
-  @media all and (max-width: 767px) {
+  @media all and (max-width: 991px) {
     .button {
       padding: 20px 30px;
       font-size: 13px; }
@@ -525,13 +589,13 @@ footer {
     border-style: solid; }
     .button-outline-white:hover {
       background-color: #fff;
-      color: #7d387d; }
+      color: #17bebb; }
 
 .back-to-top {
   background-color: #fff;
   width: 100%;
   border: none;
-  color: #7d387d;
+  color: #17bebb;
   padding: 20px 0;
   line-height: 1;
   font-size: 20px; }
@@ -544,8 +608,8 @@ footer {
   transition: all .2s ease-in-out 0s; }
 
 .thumbnail {
-  background: #27474e;
-  border-color: #7d387d;
+  background: #2e282a;
+  border-color: #17bebb;
   border: none;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -620,16 +684,17 @@ footer {
   padding-bottom: 0; }
   .gallery .img-container {
     margin-bottom: 0;
-    background: #27474e; }
+    background: #2e282a; }
     .gallery .img-container:before {
       content: "\f002";
       font-size: 30px;
       color: #fff;
       display: block;
       position: absolute;
-      top: -50%;
+      top: 50%;
       left: 50%;
       z-index: 10;
+      opacity: 0;
       font-family: "FontAwesome";
       -ms-transform: translate(-50%, -50%);
       -webkit-transform: translate(-50%, -50%);
@@ -638,7 +703,7 @@ footer {
       -moz-transition: all .2s ease-in-out 0s;
       -o-transition: all .2s ease-in-out 0s; }
     .gallery .img-container:hover:before {
-      top: 50%; }
+      opacity: 1; }
   .gallery img {
     -webkit-transition: all .2s ease-in-out 0s;
     -moz-transition: all .2s ease-in-out 0s;
@@ -656,7 +721,7 @@ footer {
 .visual-bar {
   height: 33vh;
   position: relative;
-  background: #7d387d url() no-repeat center center scroll;
+  background: #17bebb url() no-repeat center center scroll;
   background-size: cover; }
   .visual-bar--fixed {
     background-attachment: fixed; }
@@ -671,7 +736,7 @@ footer {
     left: 0;
     bottom: 0;
     right: 0;
-    background: #7d387d;
+    background: #17bebb;
     opacity: .2; }
 
 /*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
