--- a/src/static/css/typography.scss
+++ b/src/static/css/typography.scss
@@ -40,6 +40,7 @@ a{
 	color: $color-2;
 	font-weight: 700;
 	font-size: 36px;
+	margin-top: 0;
 	margin-bottom: 40px;
 	text-transform: uppercase;
 
@@ -48,11 +49,22 @@ a{
 		font-family: $font-2;
 		color: $color-1;
 		text-transform: none;
-		margin: 15px 0;
+		margin: 15px 0 70px;
 	}
 
 	@media all and(max-width: $breakpoint-mobile){
 		font-size: 26px;
+	}
+}
+
+.section-2{
+
+	.h2{
+		color: $alt-color-1;
+
+		& small{
+			color: $alt-color-2;
+		}
 	}
 }
 
@@ -95,9 +107,9 @@ a{
 }
 
 .streamer{
-	background: $color-1;
+	background: $streamer-bg-color;
 	padding: 50px 0;
-	color: #fff;
+	color:$streamer-text-color;
 	font-family: $font-1;
 	font-weight: 700;
 	font-size: 26px;
@@ -141,5 +153,58 @@ a{
 
 hr{
 	margin: 70px 0;
-	border-color: $color-1;
+	border-color: $line-color;
+}
+
+.pricelist{
+	font-family: $font-1;
+	padding: 30px 0;
+	text-align: center;
+	background-color: $section-color;
+	border: 1px solid rgba(23, 61, 80, 0.06);
+
+	&-cat{
+		// color: $color-1;
+		text-transform: uppercase;
+		margin-bottom: 10px;
+
+		&-title{
+			font-size: 20px;
+			font-weight: bold;
+		}
+		&-price{
+			font-size: 60px;
+			vertical-align: baseline;
+
+			& .amount{
+				display: inline-block;
+			}
+
+			& .currency{
+				font-size: 18px;
+				vertical-align: text-top;
+				margin-top: 10px;
+				display: inline-block;
+			}
+
+			& .duration{
+				font-size: 15px;
+				display: inline-block;
+			}
+		}
+	}
+	& ul{
+		margin: 0 0 15px;
+		padding: 0;
+		font-size: 14px;
+		
+	}
+	& li{
+		list-style-type: none;
+		padding: 10px;
+
+		&:nth-child(odd){
+			background-color: rgba(23, 61, 80, 0.06);
+		}
+	}
 }
