--- a/src/templates/partials/partial-pricelist.hbs
+++ b/src/templates/partials/partial-pricelist.hbs
@@ -1,4 +1,4 @@
-<section class="section section-line products">
+<section class="section section-2">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
@@ -6,24 +6,67 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center column">
-				<div class="prices">
-					<div>
-						<div>Populair</div>
-						<div>
-							<span class="">&euro;</span>
-							<span class="">60</span>
-							<span class="">/pm</span>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 column">
+				<div class="pricelist">
+					<div class="pricelist-cat">
+						<div class="pricelist-cat-title">Populair</div>
+						<div class="pricelist-cat-price">
+							<span class="currency">&euro;</span>
+							<span class="amount">60</span>
+							<span class="duration">/pm</span>
 						</div>
 					</div>
 					<ul>
-						<li>512MB Memory</li>
-						<li>3 Users</li>
-						<li>5 Websites</li>
-						<li>7 Domains</li>
-						<li>Unlimited Bandwidth</li>
-						<li>24/7 Support</li>
+						<li><strong>512MB</strong> Memory</li>
+						<li><strong>3</strong> Users</li>
+						<li><strong>5</strong> Websites</li>
+						<li><strong>7</strong> Domains</li>
+						<li><strong>Unlimited</strong> Bandwidth</li>
+						<li><strong>24/7</strong> Support</li>
 					</ul>
+					<a href="#" class="button button-rounded">Download</a>
+				</div>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 column">
+				<div class="pricelist">
+					<div class="pricelist-cat">
+						<div class="pricelist-cat-title">Populair</div>
+						<div class="pricelist-cat-price">
+							<span class="currency">&euro;</span>
+							<span class="amount">60</span>
+							<span class="duration">/pm</span>
+						</div>
+					</div>
+					<ul>
+						<li><strong>512MB</strong> Memory</li>
+						<li><strong>3</strong> Users</li>
+						<li><strong>5</strong> Websites</li>
+						<li><strong>7</strong> Domains</li>
+						<li><strong>Unlimited</strong> Bandwidth</li>
+						<li><strong>24/7</strong> Support</li>
+					</ul>
+					<a href="#" class="button button-rounded">Download</a>
+				</div>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 column">
+				<div class="pricelist">
+					<div class="pricelist-cat">
+						<div class="pricelist-cat-title">Populair</div>
+						<div class="pricelist-cat-price">
+							<span class="currency">&euro;</span>
+							<span class="amount">60</span>
+							<span class="duration">/pm</span>
+						</div>
+					</div>
+					<ul>
+						<li><strong>512MB</strong> Memory</li>
+						<li><strong>3</strong> Users</li>
+						<li><strong>5</strong> Websites</li>
+						<li><strong>7</strong> Domains</li>
+						<li><strong>Unlimited</strong> Bandwidth</li>
+						<li><strong>24/7</strong> Support</li>
+					</ul>
+					<a href="#" class="button button-rounded">Download</a>
 				</div>
 			</div>
 		</div>
