--- a/src/templates/partials/partial-video.hbs
+++ b/src/templates/partials/partial-video.hbs
@@ -4,7 +4,7 @@
 			<div class="col-xs-10 col-xs-offset-1 text-center">
 				<h2 class="h2">Video.<small>Checkout our latest products.</small></h2>
 				<div class="video-container">
-					<iframe src="https://player.vimeo.com/video/70403659" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					{{!-- <iframe src="https://player.vimeo.com/video/70403659" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> --}}
 				</div>
 			</div>
 		</div>
